# cgmath

./: AUTHORS  CMakeLists.txt  ProjectHome.md  README  cgmath-config.cmake.in  cgmath.sln  math3d.sln
cgmath/: CMakeLists.txt  beziercurve2.h  box3.cpp  box3.h  box3.hpp  cgmath.vcproj  det.hpp  determinant.h  determinant.hpp  float_util.h  float_util.hpp  mat22.h  mat33.cpp  mat33.h  mat33.hpp  mat33_util.hpp  mat44.cpp  mat44.h  mat44.hpp  mat44_util.h  mat44_util.hpp  mat_util.hpp  matmn.hpp  matmn_util.hpp  noise.cpp  noise.h  noise.hpp  perlin.hpp  perlin_improved.cpp  perlin_original.cpp  perlin_simplex.cpp  quat.h  quat.hpp  quat_util.hpp  range.h  range.hpp  solve_eigen.cpp  solve_eigen.h  solve_eigen.hpp  solve_eqn.cpp  (+19 more)
doc/: Doxyfile  doxygen.css  footer.html  header.html  mainpage.txt
math3d/: box3.hpp  mat33.hpp  mat44.hpp  quat.hpp  range.hpp  solve_eqn.hpp  types.hpp  vec2.hpp  vec3.hpp
test/: CMakeLists.txt  main.cpp  test.vcproj  test_mat33.cpp  test_range.cpp  test_solve_eigen.cpp  test_solve_eqn.cpp  test_vec2.cpp  test_vec2_util.cpp  test_vec3.cpp  test_vec3_util.cpp  test_vec4.cpp
