CMAKE_MINIMUM_REQUIRED(VERSION 2.8.2)
PROJECT(cgmath)

SET( CPACK_GENERATOR "ZIP" )
SET( CPACK_PACKAGE_VERSION_MAJOR "1" )
SET( CPACK_PACKAGE_VERSION_MINOR "0" )
SET( CPACK_PACKAGE_VERSION_PATCH "0" )
INCLUDE(CPack)

ADD_SUBDIRECTORY(cgmath)
ADD_SUBDIRECTORY(test)

SET( cgmath_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}" )
GET_TARGET_PROPERTY( cgmath_LIB_DEBUG cgmath LOCATION_Debug )
GET_TARGET_PROPERTY( cgmath_LIB_RELEASE cgmath LOCATION_Release )
SET( cgmath_LIBRARIES "debug ${cgmath_LIB_DEBUG} optimized ${cgmath_LIB_RELEASE}" )
CONFIGURE_FILE( "${CMAKE_CURRENT_SOURCE_DIR}/cgmath-config.cmake.in" "${CMAKE_BINARY_DIR}/cgmath-config.cmake" IMMEDIATE @ONLY )
